--- a/origin-rest-neo4j-prototype2/src/main/resources/templates/register.html
+++ b/origin-rest-neo4j-prototype2/src/main/resources/templates/register.html
@@ -26,13 +26,17 @@
 
 				<div class="actual_content">
 					<div class="formfields">
-						<form th:action="@{/reg}" th:object="${wannabeuser}">
-
-							<input type="text" class="formfield" placeholder="Username" th:field="*{username}" />
-							<input type="text" class="formfield" placeholder="Password" th:field="*{password}" />
-							<input type="text" class="formfield" placeholder="Repeat Password" th:field="*{repeatedPassword}" />
-							<input type="text" class="formfield" placeholder="Email Adress" th:field="*{emailAdress}" />
+						<form th:action="@{/register}" th:object="${wannabeuser}" method="post">
 							
+							<div class="error_message_register" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
+							<input type="text" class="formfield" placeholder="Username" th:field="*{username}" />
+							<div class="error_message_register" th:if="${#fields.hasErrors('password')}" th:errors="*{password}" ></div>
+							<input type="text" class="formfield" placeholder="Password" th:field="*{password}" />
+							<div class="error_message_register" th:if="${#fields.hasErrors('repeatedPassword')}" th:errors="*{repeatedPassword}" ></div>
+							<input type="text" class="formfield" placeholder="Repeat Password" th:field="*{repeatedPassword}" />
+							<div class="error_message_register" th:if="${#fields.hasErrors('emailAdress')}" th:errors="*{emailAdress}" ></div>
+							<input type="text" class="formfield" placeholder="Email Adress" th:field="*{emailAdress}" />
+														
 							<input type="submit" id="submit_button"	value="Submit" />
 
 						</form>
